--- a/css/iefonts_resume.css
+++ b/css/iefonts_resume.css
@@ -19,12 +19,12 @@
 }
 
 
-#u1253-86
+#u1253-105
 {
 	font-family: bitter-n4, serif;
 }
 
-#u1253-48 > #u1253-39:before,#u1253-48 > #u1253-41:before,#u1253-48 > #u1253-43:before,#u1253-48 > #u1253-45:before,#u1253-48 > #u1253-47:before,#u1253-59 > #u1253-56:before,#u1253-59 > #u1253-58:before,#u1253-71 > #u1253-64:before,#u1253-71 > #u1253-66:before,#u1253-71 > #u1253-68:before,#u1253-71 > #u1253-70:before,#u1253-79 > #u1253-76:before,#u1253-79 > #u1253-78:before
+#u1253-50 > #u1253-41:before,#u1253-50 > #u1253-43:before,#u1253-50 > #u1253-45:before,#u1253-50 > #u1253-47:before,#u1253-50 > #u1253-49:before,#u1253-61 > #u1253-58:before,#u1253-61 > #u1253-60:before,#u1253-81 > #u1253-66:before,#u1253-81 > #u1253-68:before,#u1253-81 > #u1253-70:before,#u1253-81 > #u1253-72:before,#u1253-81 > #u1253-74:before,#u1253-81 > #u1253-76:before,#u1253-81 > #u1253-78:before,#u1253-81 > #u1253-80:before,#u1253-89 > #u1253-86:before,#u1253-89 > #u1253-88:before,#u1253-98 > #u1253-95:before,#u1253-98 > #u1253-97:before
 {
 	font-family: bitter-n4, Georgia;
 }
