--- a/css/resume.css
+++ b/css/resume.css
@@ -1,7 +1,7 @@
 .version.resume /* version checker */
 {
-	color: #0000F6;
-	background-color: #D0DF91;
+	color: #0000F2;
+	background-color: #4AF04C;
 }
 
 #muse_css_mq
@@ -13,12 +13,11 @@
 {
 	z-index: 1;
 	width: 942px;
-	min-height: 760.9499999999998px;
+	min-height: 761px;
 	background-image: none;
 	border-width: 0px;
 	border-color: #000000;
 	background-color: #333333;
-	padding-bottom: 0px;
 	margin-left: auto;
 	margin-right: auto;
 }
@@ -427,13 +426,13 @@
 	margin: 0px -10000px 0px 0px;
 }
 
-#ppu1253-86
+#ppu1253-105
 {
 	width: 0.01px;
 	margin-left: -50px;
 }
 
-#pu1253-86
+#pu1253-105
 {
 	width: 0.01px;
 	margin-right: -10000px;
@@ -441,7 +440,7 @@
 	margin-left: 130px;
 }
 
-#u1253-86
+#u1253-105
 {
 	z-index: 65;
 	width: 782px;
@@ -478,26 +477,20 @@
 	font-weight: 400;
 }
 
-#u1253-11
+#u1253-12
 {
-	font-size: 14px;
-	color: #534741;
-	font-weight: 400;
-}
-
-#u1253-17
-{
-	font-size: 16px;
-	text-align: left;
-	line-height: 19px;
+	font-size: 25px;
 	padding-left: 70px;
 	color: #FFFFFF;
 	font-weight: 400;
+	line-height: 0px;/* 0 for mixed font sized paras; applied on spans instead */
 }
 
-#u1253-15
+#u1253-13
 {
-	font-weight: 700;
+	font-size: 14px;
+	color: #FFFFFF;
+	font-weight: 400;
 }
 
 #u1253-19
@@ -506,11 +499,26 @@
 	text-align: left;
 	line-height: 19px;
 	padding-left: 70px;
-	color: #9E9E9E;
+	color: #FFFFFF;
+	font-weight: 400;
+}
+
+#u1253-17
+{
 	font-weight: 700;
 }
 
 #u1253-21
+{
+	font-size: 16px;
+	text-align: left;
+	line-height: 19px;
+	padding-left: 70px;
+	color: #9E9E9E;
+	font-weight: 700;
+}
+
+#u1253-23
 {
 	text-align: left;
 	padding-left: 100px;
@@ -519,13 +527,13 @@
 	font-weight: 400;
 }
 
-#u1253-27
+#u1253-29
 {
 	color: #FFFFFF;
 	font-weight: 700;
 }
 
-#u1253-29,#u1253-32
+#u1253-31,#u1253-34
 {
 	font-size: 16px;
 	line-height: 19px;
@@ -533,19 +541,19 @@
 	font-weight: 400;
 }
 
-#u1253-16,#u1253-28,#u1253-31
+#u1253-18,#u1253-30,#u1253-33
 {
 	color: #9E9E9E;
 }
 
-#u1253-25,#u1253-33,#u1253-34
+#u1253-27,#u1253-35,#u1253-36
 {
 	font-size: 16px;
 	line-height: 19px;
 	font-weight: 400;
 }
 
-#u1253-39,#u1253-41,#u1253-43,#u1253-45,#u1253-47
+#u1253-41,#u1253-43,#u1253-45,#u1253-47,#u1253-49
 {
 	font-size: 16px;
 	text-align: left;
@@ -555,20 +563,20 @@
 	font-weight: 400;
 }
 
-#u1253-48 > #u1253-39:before,#u1253-48 > #u1253-41:before,#u1253-48 > #u1253-43:before,#u1253-48 > #u1253-45:before,#u1253-48 > #u1253-47:before
+#u1253-50 > #u1253-41:before,#u1253-50 > #u1253-43:before,#u1253-50 > #u1253-45:before,#u1253-50 > #u1253-47:before,#u1253-50 > #u1253-49:before
 {
 	font-family: bitter, Georgia;
 	font-weight: 400;
 	margin-right: -39px;
 }
 
-#u1253-48.rtl-list > #u1253-39:before,#u1253-48.rtl-list > #u1253-41:before,#u1253-48.rtl-list > #u1253-43:before,#u1253-48.rtl-list > #u1253-45:before,#u1253-48.rtl-list > #u1253-47:before
+#u1253-50.rtl-list > #u1253-41:before,#u1253-50.rtl-list > #u1253-43:before,#u1253-50.rtl-list > #u1253-45:before,#u1253-50.rtl-list > #u1253-47:before,#u1253-50.rtl-list > #u1253-49:before
 {
 	margin-right: 0px;
 	margin-left: -39px;
 }
 
-#u1253-14,#u1253-22,#u1253-49
+#u1253-16,#u1253-24,#u1253-51
 {
 	font-size: 16px;
 	text-align: left;
@@ -577,7 +585,7 @@
 	font-weight: 400;
 }
 
-#u1253-54,#u1253-62,#u1253-74
+#u1253-56,#u1253-64,#u1253-84
 {
 	font-size: 16px;
 	text-align: left;
@@ -587,20 +595,14 @@
 	font-weight: 400;
 }
 
-#u1253-59 > #u1253-56:before,#u1253-59 > #u1253-58:before,#u1253-71 > #u1253-64:before,#u1253-71 > #u1253-66:before,#u1253-71 > #u1253-68:before,#u1253-71 > #u1253-70:before,#u1253-79 > #u1253-76:before,#u1253-79 > #u1253-78:before
+#u1253-61 > #u1253-58:before,#u1253-61 > #u1253-60:before,#u1253-81 > #u1253-66:before,#u1253-81 > #u1253-68:before,#u1253-81 > #u1253-70:before,#u1253-81 > #u1253-72:before,#u1253-81 > #u1253-74:before,#u1253-81 > #u1253-76:before,#u1253-81 > #u1253-78:before,#u1253-81 > #u1253-80:before,#u1253-89 > #u1253-86:before,#u1253-89 > #u1253-88:before
 {
 	font-family: bitter, Georgia;
 	font-weight: 400;
 	margin-right: -44px;
 }
 
-#u1253-59.rtl-list > #u1253-56:before,#u1253-59.rtl-list > #u1253-58:before,#u1253-71.rtl-list > #u1253-64:before,#u1253-71.rtl-list > #u1253-66:before,#u1253-71.rtl-list > #u1253-68:before,#u1253-71.rtl-list > #u1253-70:before,#u1253-79.rtl-list > #u1253-76:before,#u1253-79.rtl-list > #u1253-78:before
-{
-	margin-right: 0px;
-	margin-left: -44px;
-}
-
-#u1253-52,#u1253-56,#u1253-58,#u1253-60,#u1253-64,#u1253-66,#u1253-68,#u1253-70,#u1253-72,#u1253-76,#u1253-78,#u1253-80
+#u1253-54,#u1253-58,#u1253-60,#u1253-62,#u1253-66,#u1253-68,#u1253-70,#u1253-72,#u1253-74,#u1253-76,#u1253-78,#u1253-80,#u1253-82,#u1253-86,#u1253-88,#u1253-90
 {
 	font-size: 16px;
 	text-align: left;
@@ -610,7 +612,52 @@
 	font-weight: 400;
 }
 
-#u1253-7,#u1253-9,#u1253-13,#u1253-24,#u1253-36,#u1253-37,#u1253-51,#u1253-82,#u1253-83
+#u1253-98 > li:before
+{
+	color: #FFFFFF;
+}
+
+#u1253-95,#u1253-97
+{
+	font-size: 25px;
+	text-align: left;
+	padding-left: 50px;
+	color: #FFFFFF;
+	font-weight: 400;
+	line-height: 0px;/* 0 for mixed font sized paras; applied on spans instead */
+}
+
+#u1253-98 > #u1253-95:before,#u1253-98 > #u1253-97:before
+{
+	font-size: 16px;
+	font-family: bitter, Georgia;
+	font-weight: 400;
+	margin-right: -44px;
+	line-height: 1.2;
+}
+
+#u1253-61.rtl-list > #u1253-58:before,#u1253-61.rtl-list > #u1253-60:before,#u1253-81.rtl-list > #u1253-66:before,#u1253-81.rtl-list > #u1253-68:before,#u1253-81.rtl-list > #u1253-70:before,#u1253-81.rtl-list > #u1253-72:before,#u1253-81.rtl-list > #u1253-74:before,#u1253-81.rtl-list > #u1253-76:before,#u1253-81.rtl-list > #u1253-78:before,#u1253-81.rtl-list > #u1253-80:before,#u1253-89.rtl-list > #u1253-86:before,#u1253-89.rtl-list > #u1253-88:before,#u1253-98.rtl-list > #u1253-95:before,#u1253-98.rtl-list > #u1253-97:before
+{
+	margin-right: 0px;
+	margin-left: -44px;
+}
+
+#u1253-11,#u1253-94,#u1253-96
+{
+	font-size: 16px;
+	line-height: 19px;
+}
+
+#u1253-99
+{
+	font-size: 25px;
+	text-align: left;
+	line-height: 30px;
+	color: #FFFFFF;
+	font-weight: 400;
+}
+
+#u1253-7,#u1253-9,#u1253-15,#u1253-26,#u1253-38,#u1253-39,#u1253-53,#u1253-92,#u1253-93,#u1253-101,#u1253-102
 {
 	font-size: 25px;
 	text-align: left;
@@ -619,7 +666,7 @@
 	font-weight: 400;
 }
 
-#u1253-84
+#u1253-103
 {
 	font-size: 20px;
 	text-align: left;
@@ -630,12 +677,12 @@
 
 #slideshowu4628
 {
-	z-index: 151;
+	z-index: 170;
 	width: 0.01px;
 	height: 284px;
 	position: relative;
 	margin-right: -10000px;
-	margin-top: 946px;
+	margin-top: 1166px;
 }
 
 #u4651
@@ -654,12 +701,12 @@
 
 #u4651popup
 {
-	z-index: 152;
+	z-index: 171;
 }
 
 #u4652
 {
-	z-index: 153;
+	z-index: 172;
 	width: 1140px;
 	height: 755px;
 	background-color: transparent;
@@ -687,12 +734,12 @@
 
 #u4631popup
 {
-	z-index: 155;
+	z-index: 174;
 }
 
 #u4638
 {
-	z-index: 156;
+	z-index: 175;
 	width: 177px;
 	height: 251px;
 	border-width: 0px;
@@ -718,9 +765,9 @@
 	width: 30px;
 	min-height: 30px;
 	background-color: transparent;
-	line-height: 20px;
 	color: #FFFFFF;
 	text-align: center;
+	line-height: 20px;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	top: 170px;
 	left: -45px;
@@ -728,7 +775,7 @@
 
 #u4650-4popup
 {
-	z-index: 158;
+	z-index: 177;
 }
 
 #u4663-4
@@ -737,9 +784,9 @@
 	width: 30px;
 	min-height: 30px;
 	background-color: transparent;
-	line-height: 20px;
 	color: #FFFFFF;
 	text-align: center;
+	line-height: 20px;
 	font-family: Georgia, Palatino, Palatino Linotype, Times, Times New Roman, serif;
 	top: 170px;
 	left: 1160px;
@@ -747,7 +794,7 @@
 
 #u4663-4popup
 {
-	z-index: 162;
+	z-index: 181;
 }
 
 #u4642
@@ -780,15 +827,15 @@
 
 #u4643-4
 {
-	z-index: 167;
+	z-index: 186;
 	width: 20px;
 	min-height: 20px;
 	border-width: 0px;
 	border-color: transparent;
 	background-color: transparent;
-	line-height: 20px;
 	color: #FFFFFF;
 	text-align: center;
+	line-height: 20px;
 	font-family: Arial, Helvetica Neue, Helvetica, sans-serif;
 	position: relative;
 	margin-right: -10000px;
